--- a/src/task_react.html
+++ b/src/task_react.html
@@ -1,6 +1,18 @@
-  
 <html>
   <head>
+    <link href="/style_taches.css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script
       src="https://unpkg.com/react@16/umd/react.development.js"
@@ -16,32 +28,52 @@
     <div id="root"></div>
 
     <script type="text/babel">
-        function Titre(props) {
-          alert(JSON.stringify(props.tasks));
-          return <h1>bonjour bla bla</h1>;
-        }
       function Task(props) {
         return (
-          <div>
-            <h3>{props.id}</h3>
-            <p>
-              {props.tache} : {props.ech}
-            </p>
-          </div>
+          <tr>
+            <td>{props.id}</td>
+            <td>{props.tache}</td>
+            <td>{props.ech}</td>
+          </tr>
         );
       }
 
       function Page(props) {
-        alert("Page : " + JSON.stringify(props.tasks));
         let taskComponents = props.tasks.map((t) => {
-          return(
-          <Task id={t.id} tache={t.tache} ech={t.echeance} />);
+          return <Task id={t.id} tache={t.tache} ech={t.ech_txt} />;
         });
         return (
           <div>
-            <h1>Todo list de la mort en react</h1>
-            {taskComponents}
-            <h2>Fin de la liste </h2>
+            <div class="container">
+              <div class="row">
+                <div class="col-12" id="bandeau_haut">
+                  <h3>Interactive Task Manager (React Version)</h3>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12" id="bloc_gauche">
+                  <table class="table tasktable table-striped table-responsive">
+                    <thead>
+                      <tr>
+                        <th>Id</th>
+                        <th>Description</th>
+                        <th>Deadline</th>
+                      </tr>
+                    </thead>
+                    <tbody>{taskComponents}</tbody>
+                  </table>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12" id="bandeau_bas">
+                  <div class="row">
+                    <div class="col-12">
+                      <p>Copyright cybernaboo</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         );
       }
@@ -49,10 +81,7 @@
       fetch("/get-tasks")
         .then((res) => res.json())
         .then((data) => {
-          // alert("Fetch : " + JSON.stringify(data));
           const domContainer = document.getElementById("root");
-          // alert("domContainer : " + domContainer);
-          // ReactDOM.render(<Titre tasks={data}/>, domContainer);
           ReactDOM.render(<Page tasks={data} />, domContainer);
         });
     </script>
